--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "typegen": "npx sanity@latest schema extract && npx sanity@latest typegen generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.12.6",
+    "@clerk/nextjs": "^6.22.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.3",
@@ -31,9 +31,10 @@
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.477.0",
     "motion": "^12.6.0",
-    "next": "15.2.1",
+    "next": "^15.3.4",
     "next-sanity": "^9.9.5",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
