--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@sanity/client": "^7.6.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.80.1",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -35,6 +36,7 @@
     "next": "^15.3.4",
     "next-sanity": "^9.9.5",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
